# phonevr-driver

./: CMakeLists.txt  README.md  driver_manifest.json  install_driver.bat
.github/workflows/: build-driver.yml
include/: capture.h  controller.h  driver.h  encoder.h  streamer.h
resources/input/: phonevr_controller_bindings.json  phonevr_controller_profile.json
src/: capture.cpp  controller.cpp  driver.cpp  driver_full.cpp  encoder.cpp  streamer.cpp
